--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -3,8 +3,16 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1 {
+    margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 40px;
+	font-family: "Courier New", monospace;
+	vertical-align: baseline;
+}
+
+html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -16,11 +24,11 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
+	margin: 1;
+	padding: 10;
+	border: 20;
+	font-size: 16px;
+	font-family: "Courier New", monospace;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
