--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -15,8 +15,8 @@ h1 {
     margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 40px;
-	font-family: "Courier New", monospace;
+	font-size: 30px;
+	font-family: "Monaco", monospace;
 	vertical-align: baseline;
 }
 
@@ -25,7 +25,7 @@ h2 {
 	padding: 15;
 	border: 5;
 	font-size: 25px;
-	font-family: "Courier New", monospace;
+	font-family: "Monac", monospace;
 	vertical-align: baseline;
 }
 
@@ -45,7 +45,7 @@ time, mark, audio, video {
 	padding: 10;
 	border: 20;
 	font-size: 16px;
-	font-family: "Courier New", monospace;
+	font-family: "Monaco", monospace;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
