--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -18,6 +18,7 @@ h1 {
 	font-size: 30px;
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
+    text-align: center;
 }
 
 h2 {
@@ -26,7 +27,7 @@ h2 {
 	border: 0;
 	font-size: 25px;
 	font-family: "Monaco", monospace;
-	vertical-align: baseline;
+	vertical-align: center;
 }
 
 html, body, div, span, applet, object, iframe, h3, h4, h5, h6, p, blockquote, pre,
