--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -12,12 +12,14 @@
 }
 
 .images {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
 
 h1 {
     margin: 0;
-	padding: 30;
+	padding: 40;
 	border: 0;
 	font-size: 30px;
 	font-family: "Monaco", monospace;
@@ -27,7 +29,7 @@ h1 {
 
 h2 {
     margin: 0;
-	padding: 20;
+	padding: 30;
 	border: 0;
 	font-size: 25px;
 	font-family: "Monaco", monospace;
@@ -47,7 +49,7 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
-	padding: 20;
+	padding: 30;
 	border: 0;
 	font-size: 16px;
 	font-family: "Monaco", monospace;
