--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -25,6 +25,7 @@ h1 {
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
     text-align: center;
+    color: white;
 }
 
 h2 {
@@ -34,6 +35,7 @@ h2 {
 	font-size: 25px;
 	font-family: "Monaco", monospace;
 	vertical-align: center;
+    color: white;
 }
 
 html, body, div, span, applet, object, iframe, h3, h4, h5, h6, p, blockquote, pre,
@@ -54,6 +56,7 @@ time, mark, audio, video {
 	font-size: 16px;
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
+    color: white;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -62,6 +65,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    background-color: #6D6D6D
 }
 ol, ul {
 	list-style: none;
