--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -34,7 +34,8 @@ h2 {
 	border: 0;
 	font-size: 25px;
 	font-family: "Monaco", monospace;
-	vertical-align: center;
+	vertical-align: baseline;
+    text-align: center;
     color: white;
 }
 
