--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -14,7 +14,8 @@
 .images {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    gap: 100px;
+    align-items: center;
 }
 
 h1 {
@@ -25,7 +26,6 @@ h1 {
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
     text-align: center;
-    color: white;
 }
 
 h2 {
@@ -36,7 +36,6 @@ h2 {
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
     text-align: center;
-    color: white;
 }
 
 html, body, div, span, applet, object, iframe, h3, h4, h5, h6, p, blockquote, pre,
@@ -57,7 +56,6 @@ time, mark, audio, video {
 	font-size: 16px;
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
-    color: white;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
