--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -14,8 +14,8 @@
 .images {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 100px;
-    align-items: center;
+    gap: 20px;
+    justify-items: center;
 }
 
 h1 {
@@ -26,6 +26,7 @@ h1 {
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
     text-align: center;
+    color: white;
 }
 
 h2 {
@@ -36,6 +37,7 @@ h2 {
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
     text-align: center;
+    color: white;
 }
 
 html, body, div, span, applet, object, iframe, h3, h4, h5, h6, p, blockquote, pre,
@@ -57,6 +59,11 @@ time, mark, audio, video {
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
 }
+
+p {
+    color: white;
+}
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
