--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -65,7 +65,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-    background-color: #b7b0ff
+    background-color: #6D6D6D
 }
 ol, ul {
 	list-style: none;
