--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -13,14 +13,14 @@
 
 .images {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     justify-items: center;
 }
 
 h1 {
     margin: 0;
-	padding: 60;
+	padding: 100;
 	border: 0;
 	font-size: 30px;
 	font-family: "Monaco", monospace;
@@ -30,7 +30,7 @@ h1 {
 
 h2 {
     margin: 0;
-	padding: 50;
+	padding: 70;
 	border: 0;
 	font-size: 25px;
 	font-family: "Monaco", monospace;
@@ -51,7 +51,7 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
-	padding: 50;
+	padding: 70;
 	border: 0;
 	font-size: 16px;
 	font-family: "Monaco", monospace;
