--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -26,6 +26,7 @@ h1 {
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
     text-align: center;
+    color: white;
 }
 
 h2 {
@@ -36,6 +37,11 @@ h2 {
 	font-family: "Monaco", monospace;
 	vertical-align: baseline;
     text-align: center;
+    color: white;
+}
+
+p {
+    color: white;
 }
 
 html, body, div, span, applet, object, iframe, h3, h4, h5, h6, p, blockquote, pre,
