--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -12,11 +12,10 @@
 }
 
 .images {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-    justify-items: center;
-}
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
 
 h1 {
     margin: 0;
