--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -13,7 +13,7 @@
 
 .images {
     float: left;
-    width: 33.33%;
+    width: 50%;
     padding: 5px;
   }
 
@@ -70,7 +70,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-    background-color: #6D6D6D
+    background-image: url("assets/images/background.png")
 }
 ol, ul {
 	list-style: none;
