--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -70,7 +70,9 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-    background-image: url("assets/images/background.png")
+    background-image: url("assets/images/background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 ol, ul {
 	list-style: none;
