--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -62,6 +62,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    background-color: black;
     background-image: url("assets/images/background.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
