--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -4,10 +4,16 @@
 */
 
 .images {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5px;
+}
+
+.videos {
+    background-color: white;
+    color: black;
     float: center;
-    width: 50%;
-    padding: 5px;
-  }
+}
 
 h1 {
     margin: 0;
