--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -29,7 +29,7 @@ h1 {
 
 h2 {
     margin: 0;
-	padding: 70;
+	padding: 100;
 	border: 0;
 	font-size: 25px;
 	font-family: "Monaco", monospace;
@@ -40,7 +40,7 @@ h2 {
 
 h5{
     margin: 0;
-	padding: 70;
+	padding: 100;
 	border: 0;
 	font-size: 16px;
 	font-family: "Monaco", monospace;
@@ -53,7 +53,7 @@ p {
     color: white;
 }
 
-html, body, div, span, applet, object, iframe, h3, h4, h5, h6, p, blockquote, pre,
+html, body, div, span, applet, object, iframe, h3, h4, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -66,7 +66,7 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
-	padding: 70;
+	padding: 100;
 	border: 0;
 	font-size: 16px;
 	font-family: "Monaco", monospace;
