--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -21,7 +21,7 @@ h1 {
 	padding: 100;
 	border: 0;
 	font-size: 30px;
-	font-family: "Monaco", monospace;
+	font-family: "Georgia", monospace;
 	vertical-align: baseline;
     text-align: center;
     color: white;
@@ -32,7 +32,7 @@ h2 {
 	padding: 100;
 	border: 0;
 	font-size: 25px;
-	font-family: "Monaco", monospace;
+	font-family: "Georgia", monospace;
 	vertical-align: baseline;
     text-align: center;
     color: white;
@@ -43,7 +43,7 @@ h5{
 	padding: 100;
 	border: 0;
 	font-size: 16px;
-	font-family: "Monaco", monospace;
+	font-family: "Georgia", monospace;
 	vertical-align: baseline;
     text-align: center;
     color: black;
@@ -69,7 +69,7 @@ time, mark, audio, video {
 	padding: 100;
 	border: 0;
 	font-size: 16px;
-	font-family: "Monaco", monospace;
+	font-family: "Georgia", monospace;
 	vertical-align: baseline;
 }
 
