--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -12,7 +12,7 @@
 
 .videos {
     width: 300px;
-    background-color: white;
+    background-image: url("assets/images/background.png");
     text-align: center;
 }
 
