--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -119,7 +119,7 @@ table {
 	border-spacing: 0;
 }
 
-.flight {
+.myButton {
 	background-color: #52EEF8;
 	color: #00545A;
 	border: none;
@@ -138,14 +138,27 @@ table {
 
 }
 
-.flight:hover {
+.myButton:hover {
 	background-color: #0FE0EA;
 	transform: scale(1.1);
 	}
   
-.flight:active {
+.myButton:active {
 	background-color: #00A9A9;
 
+}
+
+#backtotop {
+	transition: transform 2s ease-in-out;
+	transform: scale(1)
+}
+
+#backtotop:hover {
+	transform: translateY(-5px);
+}
+
+#backtotop.scrolling {
+	transform: scale(250) rotate(90deg) translateY(-45%);
 }
 
 .hiddenVideo {
