--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -5,17 +5,6 @@
    I pulled this from the guide to HTML/CSS that you provided on the application!
 */
 
-/* 
-* Referenced the following website for use of grid in organization of websites: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_of_Grid_Layout
-*/
-.images {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr 1fr;
-    gap: 5px;
-	border-radius: 25px
-}
-
 html {
 	scroll-behavior: smooth;
 }
@@ -27,10 +16,12 @@ h1 {
 	margin: 20px;
 	padding: 5px;
 	border: 0;
-	font-size: 180px;
+	font-size: 10vw;
 	vertical-align: baseline;
     text-align: center;
-    color: white;
+    color: #EBEBEB;
+	opacity: 1;
+	font-weight: bold;
 }
 
 /* 
@@ -40,10 +31,22 @@ h2 {
 	margin: 20px;
 	padding: 5px;
 	border: 0;
-	font-size: 100px;
+	font-size: 8vw;
 	vertical-align: baseline;
     text-align: center;
-    color: white;
+    color: #EBEBEB;
+	font-weight: bold;
+}
+
+h3 {
+	margin: 20px;
+	padding: 5px;
+	border: 0;
+	font-size: 6vw;
+	vertical-align: baseline;
+    text-align: center;
+    color: #EBEBEB;
+	font-weight: normal;
 }
 
 /* 
@@ -54,57 +57,38 @@ h5{
 	margin: 20px;
 	padding: 5px;
 	border: 0;
-	font-size: 30px;
+	font-size: 4vw;
 	vertical-align: baseline;
     text-align: center;
-    color: black;
+    color: #EBEBEB;
 }
 
 /* 
 * Sets the color of p
 */
 p {
-    font-size: 20px;
-	color: white;
+	font-size: 2.1vw;
+	color: #EBEBEB;
 }
 
-html, body, div, applet, object, iframe, h3, h4, h6, blockquote, pre,
-abbr, acronym, address, big, cite, code,
-del, dfn, em, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	/* margin: 20px; */
-	padding: 5px;
-	border: 0;
-	font-size: 16px;
-	font-family: "Courier New", monospace;
-	vertical-align: baseline;
-    text-align: center;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
 
 /* 
 * Here, I also attempted to set a background image but despite countless testing, could not figure out how to do it correctly.
 */
 body {
 	line-height: 1;
-    background-color: #001502;
+    background-color: #002202;
     background-image: url("assets/images/background.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+	
+	padding: 5px;
+	border: 0;
+	font-size: 16px;
+	font-family: "Courier New", monospace;
+	vertical-align: baseline;
+    text-align: center;
 }
 ol, ul {
 	list-style: none;
@@ -162,6 +146,8 @@ table {
 }
 
 .topButton {
+	position: relative;
+	z-index: 2;
 	background-color: #3EE94B;
 	color: #005204;
 	border: none;
@@ -209,51 +195,210 @@ table {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	gap: 10px
 }
 
 .container-item {
-	margin: 0px
+	transition: all 0.2s ease-in-out;
+	flex: 1;
+}
+
+.container-item img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover
+}
+
+.container-item p {
+	padding: 20px;
 }
 
 .navigation {
+	z-index: 1;
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: flex-end;
-	padding: 10px;
-	background: #001502;
+	justify-content: center;
+	padding: 20px;
+	background: #002202;
 	position: sticky;
 	top: 0;
+	border: 1px solid #EBEBEB
 }
   
 .navigation a {
 	text-decoration: none;
 	padding: 10px;
-	color: white;
+	margin: 3px;
+	color: #EBEBEB;
 	border-radius: 10px;
 	transition: all 0.2s ease-in;
 }
   
-.navigation a:hover {
+.navigation .destination:hover {
 	background: #00AC10;
 }
 
-#research {
+.inTextLink {
 	transition: color 0.2s ease-in-out;
 	color: #3EE94B;
+	font-weight: bold;
 
 }
 
-#research:hover {
+.inTextLink:hover {
 	color: #00AC10;
-	
 }
 
-#research:active {
+.inTextLink:active {
 	color: #008A0D
 }
 
 hr {
-	padding:10px;
+	padding:2vw;
 	border: 0px
+}
+
+/* https://blog.hubspot.com/website/css-fade-in */
+.fadeIn {
+	animation: fadeIn 1s
+}
+
+.fadeFast {
+	animation: fadeIn 2s
+}
+
+.fadeSlow {
+	animation: fadeIn 3s
+}
+
+@keyframes fadeIn {
+	0% {opacity: 0;}
+	100% {opacity: 1;}
+}
+
+.glow {
+	transition: box-shadow 0.2s ease-in-out;
+	border-radius: 10%;
+}
+
+.glow:hover {
+	box-shadow: 0 0 10px #009507;
+}
+
+.glow:active {
+	transition: box-shadow 0s ease-in-out;
+	box-shadow: 0 0 15px #00B308;
+}
+
+.interestsContainer {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+}
+
+.interestsImage {
+	width: 100%;
+	border-radius: 10%;
+	height: auto;
+	display: block;
+	transition: all 0.3s ease-in-out;
+}
+
+.interestsText {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border-radius: 10%;
+	align-items: center;
+	justify-content: center;
+	background: rgba(0, 0, 0, 0.7);
+	color: #EBEBEB;
+	opacity: 0;
+	transition: all 0.3s ease-in-out;
+}
+
+#interest {
+	position: relative;
+	font-size: 2vw;
+	margin: 10px;
+	flex: 0 0 30%;
+	transition: opacity 0.3s ease-in-out;
+}
+
+.wrapper:hover .interestsImage {
+	transform: scale(1.1);
+	box-shadow: 0 0 10px #009507;
+}
+
+.wrapper:hover .interestsText {
+	transform: scale(1.1);
+	opacity: 1;
+}
+
+.backgroundImage {
+	background-image: url("/assets/images/work.png");
+	background-size: cover;
+	background-position: left;
+	background-repeat: no-repeat;
+	color: #EBEBEB;
+	padding: 200px;
+	opacity:1;
+  }
+
+.container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+#language {
+	margin: 10px;
+	flex: 0 0 20%;
+}
+
+#language img {
+	transition: all 0.2s ease-in-out;
+	width: 20vw;
+	height: auto;
+}
+
+#language img:hover {
+    transform: scale(1.1);
+}
+
+#code {
+	margin: 10px;
+	flex: 0 0 8%;
+}
+
+#code img {
+	width: 8vw;
+	height: auto;
+	transition: all 0.2s ease-in-out;
+}
+
+#code img:hover {
+	transform: scale(1.1);
+}
+
+.container-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.socials {
+	margin: 10px;
+	flex: 0 0 1%;
+}
+
+.socials img {
+	width: 4vw;
+	height: auto;
+	transition: all 0.2s ease-in-out;
+}
+
+.socials img:hover {
+	transform: scale(1.1);
 }
